docs/kubernetes/example-spring-cloud-kubernetes-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: example-spring-cloud-kubernetes
