docs/kubernetes/0.2-mongo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: example-spring-cloud-kubernetes
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  serviceName: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:5.0.5
          imagePullPolicy: IfNotPresent
#          command: [ "mongod" ]
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: mongo-data
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongodata

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: example-spring-cloud-kubernetes
spec:
  clusterIP: None # headless
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    app: mongodb
  type: ClusterIP
