docs/kubernetes/example-spring-cloud-kubernetes-server-movie.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-spring-cloud-kubernetes-server-movie
  namespace: example-spring-cloud-kubernetes
  labels:
    app: example-spring-cloud-kubernetes-server-movie
spec:
  type: NodePort
  ports:
    - port: 8080
  selector:
    app: example-spring-cloud-kubernetes-server-movie
