docs/kubernetes/0.1-kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kong
  name: kong
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: kong.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingress-kong
                port:
                  number: 8000
