docs/kubernetes/0.3-konga.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konga
  namespace: example-spring-cloud-kubernetes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: konga
  template:
    metadata:
      labels:
        name: konga
        app: konga
    spec:
      containers:
        - name: konga
          image: pantsel/konga
          ports:
            - containerPort: 1337
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: konga
  name: konga
  namespace: example-spring-cloud-kubernetes
spec:
  ports:
    - protocol: TCP
      port: 1337
      targetPort: 1337
  selector:
    app: konga
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: konga
  namespace: example-spring-cloud-kubernetes
spec:
  rules:
    - host: konga.local
      http:
        paths:
          - path: /konga
            pathType: Prefix
            backend:
              service:
                name: konga
                port:
                  number: 1337

#  tls:
#    - hosts:
#        - konga.mydomain.com
#      secretName: konga-mydomain-tls
#kubetpl render konga.yml -i kong-env.yml --syntax go-template  | kubectl apply -f -
