docs/kubernetes/example-spring-cloud-kubernetes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: example-spring-cloud-kubernetes
  name: example-spring-cloud-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: ingress.local
      http:
        paths:
          - path: /account
            pathType: Prefix
            backend:
              service:
                name: example-spring-cloud-kubernetes-server-account
                port:
                  number: 8080
          - path: /movie
            pathType: Prefix
            backend:
              service:
                name: example-spring-cloud-kubernetes-server-movie
                port:
                  number: 8080
